the provided reference. Do not attempt to manipulate the records using the
model methods setData() or setRecord().

* removeRows() no longer emits extra beforeDelete signal for out of range row.

* removeRows() now requires the whole range of targetted rows to be valid
before doing anything. Previously, it would remove what it could and
ignore the rest of the range.

* setRecord() and insertRecord()
  -Only use fields where generated flag is set to true. This is
  is consistent with the meaning of the flag.
  -Require all fields to map correctly. Previously fields that didn't
  map were simply ignored.
  -For OnManualSubmit, insertRecord() no longer leaves behind an empty
  row if setRecord() fails.
  -setRecord() now automatically submits for OnRowChange.

* QSqlQueryModel::indexInQuery() is now virtual. See
QSqlTableModel::indexInQuery() as example of how to implement in a
subclass.

* QSqlTableModel::selectRow(): This is a new method that refreshes a single
row in the model from the database.

* QSqlTableModel edit strategies OnFieldChange/OnRowChange QTBUG-2875
Previously, after changes were submitted in these edit strategies, select()
was called which removed and inserted all rows. This ruined navigation
in QTableView. Now, with these edit strategies, there is no implicit select()
done after committing. This includes deleted rows which remain in
the model as blank rows until the application calls select(). Instead,
selectRow() is called to refresh only the affected row.

* QSqlTableModel::isDirty(): New overloaded method to check whether model
has any changes to submit. QTBUG-3108

* QSqlTableModel::setData() and setRecord() no longer revert pending changes
that fail upon resubmitting for edit strategies OnFieldChange and OnRowChange.
Instead, pending (failed) changes cause new changes inappropriate to the
edit strategy to be refused. The application should resolve or revert pending
changes. insertRows() and insertRecord() also respect the edit strategy.
